--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -149,7 +149,7 @@ a postcondition using \emph{ensuring}.
       }
   } ensuring(res => res >= 0)
 \end{lstlisting}
-	\caption{Factorial program with specification}
+	\caption{Factorial function with specification}
 	\label{fig:factorial}
 \end{figure}
 Our function does not satisfy the specification. An overflow in the
@@ -160,7 +160,7 @@ BigInt will result in a successful verification.
 \begin{figure}
 	\centering
 		\includegraphics[width=\textwidth]{output1.png}
-	\caption{Stainless output for the factorial program}
+	\caption{Stainless output for the factorial function}
 	\label{fig:failed}
 \end{figure}
 
@@ -440,49 +440,260 @@ C-like data types. For example, the Satoshis class, which is used to
 represent an amount of satoshis, is implemented using the class Int64
 which represents the C-type \texttt{int64\_t}.
 
-\paragraph{Extracting the Relevant Code} The relevant code for the
-addition of satoshis is in two files: \texttt{CurrencyUnits.scala} and
-\texttt{NumberType.scala}.
-
 \begin{figure}
-\lstinputlisting[style=scala]{../code/addition/src/main/scala/reduced/number/NumberType.scala}
+\lstinputlisting[style=scala]{../code/addition/src/main/scala/extracted/number/NumberType.scala}
   \caption{Extracted Code from NumberType.scala}
   \label{fig:numbertype}
 \end{figure}
 
 \begin{figure}
-\lstinputlisting[style=scala]{../code/addition/src/main/scala/reduced/currency/CurrencyUnits.scala}
+\lstinputlisting[style=scala]{../code/addition/src/main/scala/extracted/currency/CurrencyUnits.scala}
   \caption{Extracted Code from CurrencyUnits.scala}
   \label{fig:currencyunits}
 \end{figure}
 
-From those files we removed all code that is not needed for the
-verification of our property.  For example, we removed all number
-types except for Int64 (so Int32, UInt64, etc.) because they are not
-used. We also removed the superclasses Factory and NetworkElement of
-CurrencyUnit and Number, respectively, because the inherited members
-are not used. Also, we removed all binary operations on Number that
-are not used, like subtraction and multiplication. The extracted code
-is shown in Figure~\ref{fig:numbertype} and
-Figure~\ref{fig:currencyunits}.
+\paragraph{Extracting the Relevant Code} The relevant code for the
+addition of satoshis is in two files: \texttt{CurrencyUnits.scala} and
+\texttt{NumberType.scala}. From those files we removed the majority of
+the code because it is not needed for the verification of our
+property.  For example, we removed all number types except for Int64
+(so Int32, UInt64, etc.) because they are not used. We also removed
+the superclasses Factory and NetworkElement of CurrencyUnit and
+Number, respectively, because the inherited members are not
+used. Also, we removed all binary operations on Number that are not
+used, like subtraction and multiplication. The extracted code is shown
+in Figure~\ref{fig:numbertype} and Figure~\ref{fig:currencyunits}.
 
-\paragraph{A Bug in the checkTransaction Function.}
+\paragraph{A Bug in the checkTransaction Function.} 
 
 
-\paragraph{Transforming the Code.}
+\paragraph{Transforming the Code.} Here we see how to transform the
+bitcoin-s code into the Scala fragment supported by Stainless.  All
+transformations are equivalent in the sense that if the
+addition-with-zero property holds for the transformed code, then it
+also holds for the code before the transformation. Here is the list of
+features used by the extracted code but unsupported by Stainless, and
+how to transform the code:
 
-When we run Stainless on this code (without any properties to prove),
-it throws the following errors: describe errors: no support for
-  abstract types, unsupported arguments for the BigInt constructor,
-  unsupported inheritance for objects.
 
-\todo{...}
+\begin{enumerate}
+\item Inheriting Objects. Here, we can just turn the objects into case
+  objects by literally just changing the word \texttt{object} into
+  \texttt{case object} on lines 65 and 33 in the two respective files.
 
-why fix the preconditions:
-\begin{itemize}
-\item all green: new errors stand out more
-\item at runtime, errors are caught earlier, which is preferrable
-\end{itemize}
+That transformation is equivalent. Case objects have some additional
+properties (in particular, being serializable) and they inherit from
+\texttt{Product} instead of \texttt{AnyRef}, but none of our code
+depends on any of that.
+
+
+\item Abstract Type Members.
+
+
+Note that we can not simply replace the unsupported abstract type
+member by a (supported) type parameter. The problem is that the
+CurrencyUnit class uses one of its implementing classes: Satoshis.
+
+Satoshis would have to instantiate a potential type parameter with
+type Int64, so it would extend CurrencyUnit[Int64]. But that is too
+specific, because the return type of the \texttt{+}-method would then then be
+CurrencyUnit[Int64] not CurrencyUnit[A].
+
+Since we only want to verify the addition of satoshis, and the
+Satoshis class overrides A with Int64 anyway, we just remove the
+abstract type and set it to Int64.
+
+We remove line 6 and line 22 from CurrencyUnits.scala (to maintain
+line numbers we actually replace them with empty lines for now) and in
+line 18 we replace A by Int64.
+
+
+\item{Non-Literal BigInt Constructor Argument}
+
+
+As described before, the types in the Stainless library are more
+restricted than their Scala library counterparts. In particular, the
+Stainless BigInt constructor is restricted to literal arguments.
+
+
+Here we can simply use toBigInt on the field \texttt{underlying}
+directly.  So, instead of converting the underlying to Long and back
+to BigInt we convert underlying directly to BigInt.
+
+We replace line 26 by
+\begin{lstlisting}[style=scala]
+def toBigInt: BigInt = underlying.toBigint
+\end{lstlisting}
+
+This is an equivalent transformation: the only thing that might go
+wrong in the detour via \texttt{Long} is that the BigInt underlying
+Int64 in turn underlying Satoshis does not fit into a Long. However,
+the only constructor of Int64 ensures exactly that.
+
+\item{Self-Reference in Type Parameter Bound}
+
+Stainless does not currently support a class with a type parameter
+with a type boundary that contains the type parameter itself. We opened an
+issue \cite{Stainless:issue519} on the Stainless repository and the
+Stainless developers have targeted Stainless version 0.4 to support
+such self-referential type boundaries.
+
+For now, since our code only uses Number with type parameter T
+instantiated to Int64, we just remove the type parameter and replace
+it by Int64. We respectively replace lines 8, 44 and 49 by
+\begin{lstlisting}[style=scala]
+sealed abstract class Number {
+\end{lstlisting}
+
+\begin{lstlisting}[style=scala]
+sealed abstract class SignedNumber extends Number
+\end{lstlisting}
+
+\begin{lstlisting}[style=scala]
+sealed abstract class Int64 extends SignedNumber {
+\end{lstlisting}
+
+and replace T by Int64 in lines 25-27.
+
+
+\item{Missing Member \texttt{bigInteger} in BigInt}
+
+
+
+The Scala class BigInt is essentially a wrapper around
+java.math.BigInteger. BigInt has a member bigInteger which is the
+underlying instance of the Java class. The Java class has a method
+longValueExact which returns a long only if the BigInteger fits into a
+long, otherwise throws exception. Stainless does not support Java
+classes and in particular its BigInt has no member bigInteger.
+
+However, our code never calls toLong anymore, so we just remove it. We
+replace line 14 in NumberType.scala and line 28 in CurrencyUnits.scala
+by an empty line.
+
+
+\item{Type Member}
+
+
+Our version of Stainless does not support type members. We just
+replace all occurrence of A with BigInt, since A is never overwritten
+in an implementing class.
+
+We remove line 9 in NumberType.scala and replace A by BigInt in lines
+12, 25, 33 and 50.
+
+In the mean time Stainless has implemented support for type member
+\cite{Stainless:pull470}.  Since version 0.2 verification should
+succeed without this change.
+
+
+
+\item{Missing Bitwise-And Method on BigInt}
+
+Contrary to Scala BigInt, the Stainless BigInt class does not support
+bitwise operations, in particular not the \&-method for bitwise and.
+
+The bitwise and with the andMask on line 34 is a bounds check.  It
+checks if the result parameter is in range of the specified type,
+which in our case is the hard coded Int64.
+
+So, we replace the \& mask with a check whether the result
+is in range of Long.MinValue and Long.MaxValue, because Int64 has the
+same 64-bit range as Long.  
+
+We replace lines 34-35 by the following, squeezed into two lines to
+preserve line numbers. Note that the BigInt constructor requires a
+literal:
+
+\begin{lstlisting}[style=scala]
+require(result <= BigInt("9223372036854775807")  
+  && result >= BigInt("-9223372036854775808"),
+      "Result was out of bounds, got: " + result)
+\end{lstlisting}
+
+
+
+
+\item{Inner Class in Case Object}
+
+Stainless does not support inner classes in a case object. Bitcoin-s
+uses this a lot to separate the class from its implementation.
+
+This is easy to fix. We just move the inner classes out of the case objects. They do
+not interfere with any other code.
+
+We remove lines 66-71 in NumberType.scala and insert them at the end of the file.
+We remove line 42 in CurrencyUnits.scala and insert it at the end of the file.
+
+
+\item{Message Parameter in Require}
+
+Here the require(condition, message) is used as an assertion: if the
+condition is false the fail with message.  Stainless does not support
+the message parameter of require.  For the verification we can simply
+remove that parameter.
+
+
+
+\item{Missing Implicit Long to BigInt Conversion}
+
+This error message does not specify a line number and it is not clear
+what ``inv'' is. However, the Scala BigInt has implict conversions
+from Long and they are missing in the Stainless BigInt.
+
+
+
+We replace the two require clauses at lines 67 and following in NumberType.scala
+
+\begin{lstlisting}[style=scala]
+  require(underlying >= -9223372036854775808L)
+  require(underlying <= 9223372036854775807L)
+\end{lstlisting}
+
+by:
+\begin{lstlisting}[style=scala]
+  require(underlying >= BigInt(-9223372036854775808L))
+  require(underlying <= BigInt(9223372036854775807L))
+\end{lstlisting}
+
+We also replace lines 76 and 77
+\begin{lstlisting}[style=scala]
+  lazy val min = Int64(-9223372036854775808L)
+  lazy val max = Int64(9223372036854775807L)
+\end{lstlisting}
+
+by:
+\begin{lstlisting}[style=scala]
+  lazy val min = Int64(BigInt(-9223372036854775808L))
+  lazy val max = Int64(BigInt(9223372036854775807L))
+\end{lstlisting}
+
+
+\item{Missing BigInt Constructor with Long Argument}
+
+Here again, the Scala BigInt has a constructor with a Long argument
+which is missing in the Stainless BigInt.
+
+We simply replace the Long values in a BigInt constructor call with a string
+literal.
+
+The lines from the previous transformation respectively change into
+the following:
+
+\begin{lstlisting}[style=scala]
+  require(underlying >= BigInt("-9223372036854775808"))
+  require(underlying <= BigInt("9223372036854775807"))
+\end{lstlisting}
+
+and
+
+\begin{lstlisting}[style=scala]
+  lazy val min = Int64(BigInt("-9223372036854775808"))
+  lazy val max = Int64(BigInt("9223372036854775807"))
+}
+\end{lstlisting}
+\end{enumerate}
+
 
 \paragraph{The Specification.}
 
@@ -499,7 +710,7 @@ Finally, everything is green and correctly verified.
 \begin{figure}
 	\centering
 		\includegraphics[width=\textwidth]{result_output}
-	\caption{Output of Stainless verification for addition with 0 of Bitcoin-S-Cores CurrencyUnit}
+	\caption{Stainless output for the transformed code}
 \end{figure}
 
 
@@ -548,16 +759,6 @@ the Stainless developers to improve the tool.
 \appendix
 
 
-
-
-% \section{Extracted Code}
-% \label{sec:extracted}
-
-% \subsection{NumberType.scala}
-% \lstinputlisting[style=scala]{../code/addition/src/main/scala/reduced/number/NumberType.scala}
-
-% \subsection{CurrencyUnits.scala}
-% \lstinputlisting[style=scala]{../code/addition/src/main/scala/reduced/currency/CurrencyUnits.scala}
 
 
 \section{Code Transformations} 
@@ -690,7 +891,6 @@ and replace T by Int64 in lines 25-27.
             def toLong: Long = toBigInt.bigInteger.longValueExact()
                               ^^^^^^^^^^^^^^^^^^^
 \end{lstlisting}
-\todo{stainless error emssage missing}
 
 The Scala class BigInt is essentially a wrapper around
 java.math.BigInteger. BigInt has a member bigInteger which is the
@@ -755,8 +955,6 @@ require(result <= BigInt("9223372036854775807")
 \end{lstlisting}
 
 
-\todo{kai here we do not know if it changes semantic. ramon: oh, we don't?}
-
 
 
 \subsection{Inner Class in Case Object}
@@ -776,7 +974,7 @@ require(result <= BigInt("9223372036854775807")
 \end{lstlisting}
 
 Stainless does not support inner classes in a case object. Bitcoin-s
-uses this a lot to separate the class \todo{ramon: i don't understand} from its implementation.
+uses this a lot to separate the class from its implementation.
 
 This is easy to fix. We just move the inner classes out of the case objects. They do
 not interfere with any other code.
@@ -869,16 +1067,6 @@ and
   lazy val max = Int64(BigInt("9223372036854775807"))
 }
 \end{lstlisting}
-
-
-% \section{Verified Code}
-% \label{sec:verified}
-
-% \subsection{NumberType.scala}
-% \lstinputlisting[style=scala]{../code/addition/src/main/scala/verified/number/NumberType.scala}
-
-% \subsection{CurrencyUnits.scala}
-% \lstinputlisting[style=scala]{../code/addition/src/main/scala/verified/currency/CurrencyUnits.scala}
 
 
 
