--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,7 +1,8 @@
 
 
 @misc{Stainless:documentation,
-  author = "{Stainless documentation}",
+  author = "{LARA Lab, École Polytechnique Fédérale de Lausanne}",
+  title = "{Stainless documentation}",
   url = {https://epfl-lara.github.io/stainless/},
   note = {Accessed 2019-06-19}
 }
@@ -23,7 +24,7 @@
 
 @misc{Stainless:pull470,
   author = "{The Stainless developers}",
-  title = "Pull request 470: Type aliases, type members, and dependent function types",
+  title = "Type aliases, type members, and dependent function types",
   url = {https://github.com/epfl-lara/stainless/pull/470},
   note = {Accessed 2019-06-27}
 }
@@ -43,6 +44,13 @@
   note = {Accessed 2019-06-19}
 }
 
+@misc{BitcoinS:pull565,
+  author = "Ramon Boss",
+  title = "Remove redundant function checkResult",
+  url = {https://github.com/bitcoin-s/bitcoin-s/pull/565},
+  note = {Accessed 2019-07-03}
+}
+
 
 @misc{BitcoinS:website,
   author = "{Suredbits \& the bitcoin-s developers}",
@@ -50,6 +58,22 @@
   url = {https://bitcoin-s.org},
   note = {Accessed 2019-06-19}
 }
+
+@misc{java:bigint,
+  author = "{Oracle and/or its affiliates}",
+  title = "{Class BigInteger}",
+  url = {https://docs.oracle.com/javase/8/docs/api/java/math/BigInteger.html},
+  note = {Accessed 2019-07-03}
+}
+
+
+@misc{wikipedia:twocomp,
+  author = "{Wikipedia contributors}",
+  title = "Two's complement",
+  url = {https://en.wikipedia.org/wiki/Two\%27s_complement},
+  note = {Accessed 2019-07-03}
+}
+
 
 @misc{cve201817144,
   author = {Jimmy Song},
